--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.2.0",
     "react-native": "0.72.10",
     "react-native-elements": "^3.4.3",
     "react-native-heroicons": "^4.0.0",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "13.9.0",
     "styled-components": "^6.1.9"
   },
   "devDependencies": {
