--- a/package.json
+++ b/package.json
@@ -11,23 +11,29 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@rneui/base": "github:react-native-elements/react-native-elements#base",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "^49.0.23",
-    "expo-font": "~11.4.0",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~51.0.4",
+    "expo-blur": "^13.0.2",
+    "expo-font": "~12.0.5",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
     "react-native-heroicons": "^4.0.0",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-otp-entry": "^1.6.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-phone-input": "^1.3.7",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "styled-components": "^6.1.9"
   },
   "devDependencies": {
