--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@rneui/base": "github:react-native-elements/react-native-elements#base",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~51.0.4",
+    "axios": "^1.6.8",
+    "expo": "^51.0.8",
     "expo-blur": "^13.0.2",
     "expo-font": "~12.0.5",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-heroicons": "^4.0.0",
+    "react-native-maps": "1.14.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-otp-entry": "^1.6.1",
     "react-native-paper": "^5.12.3",
