--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "6.7.0",
     "moti": "^0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -48,6 +49,7 @@
     "react-native-screens": "3.31.1",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "15.2.0",
+    "react-native-webview": "^13.10.3",
     "styled-components": "^6.1.9"
   },
   "devDependencies": {
