--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@rneui/base": "github:react-native-elements/react-native-elements#base",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.2",
-    "expo": "~51.0.12",
+    "expo": "~51.0.13",
+    "expo-app-loading": "^1.1.2",
     "expo-blur": "^13.0.2",
     "expo-font": "~12.0.5",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "geolib": "^3.3.4",
     "lottie-react-native": "6.7.0",
     "moti": "^0.29.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
@@ -37,7 +41,8 @@
     "react-native-heroicons": "^4.0.0",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "^1.14.0",
+    "react-native-maps": "1.14.0",
+    "react-native-maps-clustering": "^1.2.4",
     "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-otp-entry": "^1.6.1",
@@ -49,7 +54,7 @@
     "react-native-screens": "3.31.1",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "15.2.0",
-    "react-native-webview": "^13.10.3",
+    "react-native-webview": "13.8.6",
     "styled-components": "^6.1.9"
   },
   "devDependencies": {
