--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@voiceflow/react-chat": "^1.58.2",
     "axios": "^1.7.2",
     "expo": "~51.0.13",
-    "expo-app-loading": "^1.1.2",
+    "expo-app-loading": "^1.0.3",
     "expo-blur": "^13.0.2",
-    "expo-font": "~12.0.5",
+    "expo-font": "~12.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
     "expo-splash-screen": "~0.27.5",
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-animatable": "^1.4.0",
     "react-native-clusterer": "^2.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-geolocation-service": "^5.3.1",
