--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.14.0",
     "react-native-maps-clustering": "^1.2.4",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-otp-entry": "^1.6.1",
