--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@voiceflow/react-chat": "^1.58.2",
     "axios": "^1.7.2",
-    "expo": "~51.0.13",
+    "expo": "~51.0.16",
     "expo-app-loading": "^1.0.3",
     "expo-blur": "^13.0.2",
     "expo-font": "~12.0.7",
@@ -31,7 +31,7 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "geolib": "^3.3.4",
-    "lottie-react-native": "6.7.0",
+    "lottie-react-native": "^6.7.0",
     "moti": "^0.29.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
